--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,7 +8,7 @@ phases:
       - pip install --upgrade pip
       - pip install pipenv --user
       - pipenv install awscli aws-sam-cli
-      - pipenv run sam package --template-file template.yml --s3-bucket aws-serverless-application-repository-artifacts --output-template-file packaged-template.yml
+      - pipenv run sam package --template-file template.yml --s3-bucket aws-serverless-application-repository-artifacts --output-template-file packaged.yml
 artifacts:
   files:
     - packaged-template.yml
